--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,10 @@
 {
   "type": "module",
   "dependencies": {
+    "@picocss/pico": "^2.1.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "sequelize": "^6.37.7",
@@ -11,6 +13,26 @@
     "yaml": "^2.8.1"
   },
   "devDependencies": {
+    "@awmottaz/prettier-plugin-void-html": "^1.9.0",
+    "prettier": "^3.7.4",
     "sequelize-erd": "^1.3.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sqlite3"
+    ]
+  },
+  "prettier": {
+    "plugins": [
+      "@awmottaz/prettier-plugin-void-html"
+    ],
+    "overrides": [
+      {
+        "files": "*.ejs",
+        "options": {
+          "parser": "html"
+        }
+      }
+    ]
   }
 }
