--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@picocss/pico": "^2.1.1",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
