--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@awmottaz/prettier-plugin-void-html": "^1.9.0",
+    "@faker-js/faker": "^10.1.0",
     "prettier": "^3.7.4",
     "sequelize-erd": "^1.3.1"
   },
