--- a/app/SocialNewsApp/SocialNewsApp.csproj
+++ b/app/SocialNewsApp/SocialNewsApp.csproj
@@ -20,5 +20,6 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="MessageBox.Avalonia" />
   </ItemGroup>
 </Project>
