--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "jdenticon": "^3.3.0",
     "jsonwebtoken": "^9.0.3",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
